--- a/app/src/main/res/layout/fragment_view_expense.xml
+++ b/app/src/main/res/layout/fragment_view_expense.xml
@@ -21,7 +21,7 @@
             android:id="@+id/textViewTotalExpense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Balance"/>
+            android:text="Expenses"/>
     </android.support.v7.widget.CardView>
     <ListView
         android:layout_width="match_parent"
