--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -45,31 +45,41 @@ tools:context="couplegoals.com.couplegoals.fragments.AddExpenseFragment">
                 android:drawableLeft="@drawable/ic_action_notes"
                 android:text=""/>
         </LinearLayout>
-        <Button
-            android:id="@+id/btSaveExpenseDetails"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Save"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <ImageButton
                 android:id="@+id/btnUploadImage"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_action_uploadimage" />
+
+            <Button
+                android:id="@+id/btSaveExpenseDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Upload photo"
-                android:drawableRight="@drawable/ic_action_uploadimage"/>
+                android:text="Save"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
         </LinearLayout>
         <ImageView
             android:id="@+id/imageViewExpense"
             android:layout_width="match_parent"
-            android:layout_height="340dp"
+            android:layout_height="0dp"
             android:layout_marginBottom="5dp"
             android:scaleType="centerCrop"
+            android:visibility="invisible"
             android:adjustViewBounds="true"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
