--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -17,21 +17,38 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="1">
                 <EditText
-                    android:id="@+id/etTodaysPost"
-                    android:layout_width="match_parent"
+                    android:id="@+id/etTodaysPostMessage"
+                    android:layout_width="240dp"
                     android:layout_height="wrap_content"
-                    android:hint="How are you feeling today?"
-                    android:layout_weight="1"/>
+                    android:hint="How are you feeling today?" />
+
+                <ImageButton
+                    android:id="@+id/imageBtnTodayPost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_action_uploadimage"
+                    android:background="@android:color/transparent"
+                    android:layout_weight="0.98" />
+
                 <Button
                     android:id="@+id/btnPost"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Post"
-                    android:layout_weight="5"/>
+                    android:text="Post" />
             </LinearLayout>
-
+            <ImageView
+                android:id="@+id/imageViewTodayPost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"/>
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/listViewTodaysPost">
+            </ListView>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
