--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -8,7 +8,8 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardViewBaseFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/homebackground">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,6 +19,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:paddingLeft="2dp"
+                android:paddingRight="2dp"
                 android:weightSum="1">
                 <EditText
                     android:id="@+id/etTodaysPostMessage"
