--- a/app/src/main/res/layout/card_layout_view_daily_post.xml
+++ b/app/src/main/res/layout/card_layout_view_daily_post.xml
@@ -20,7 +20,7 @@
         android:layout_marginRight="12dp"
         android:layout_marginTop="12dp"
         android:elevation="10dp"
-        android:id="@+id/cardView">
+        android:id="@+id/cardViewPostListDetails">
 
         <LinearLayout
             android:layout_width="match_parent"
