--- a/app/src/main/res/layout/card_layout_view_daily_post.xml
+++ b/app/src/main/res/layout/card_layout_view_daily_post.xml
@@ -38,7 +38,8 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingLeft="5dp">
 
                 <TextView
                     android:id="@+id/cardMessageToday"
