--- a/app/src/main/res/layout/fragment_view_expense.xml
+++ b/app/src/main/res/layout/fragment_view_expense.xml
@@ -17,11 +17,23 @@
         android:layout_marginTop="2dp"
         android:elevation="10dp"
         android:id="@+id/cardViewyourcreditder">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         <TextView
             android:id="@+id/textViewTotalExpense"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Expenses"/>
+            android:layout_height="35dp"
+            android:text="Expenses"
+            android:layout_weight="1"/>
+            <ImageButton
+                android:id="@+id/btnShare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_action_share"
+                android:background="@android:color/transparent"/>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
     <ListView
         android:layout_width="match_parent"
