--- a/app/src/main/res/layout/fragment_personal_expense.xml
+++ b/app/src/main/res/layout/fragment_personal_expense.xml
@@ -22,14 +22,14 @@ tools:context="couplegoals.com.couplegoals.fragments.PersonalExpenseFragment">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Add expense"/>
+            android:text="@string/add_personal_expense"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/etAmount"
+                android:id="@+id/etPersonalAmount"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:hint="Amount"
@@ -37,7 +37,7 @@ tools:context="couplegoals.com.couplegoals.fragments.PersonalExpenseFragment">
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/ic_action_ruppes"/>
             <EditText
-                android:id="@+id/etNotes"
+                android:id="@+id/etPersonalNotes"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:maxWidth="180dp"
@@ -51,14 +51,14 @@ tools:context="couplegoals.com.couplegoals.fragments.PersonalExpenseFragment">
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/btnUploadImage"
+                android:id="@+id/btnPersonalUploadImage"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:background="@android:color/transparent"
                 android:src="@drawable/ic_action_uploadimage" />
 
             <Button
-                android:id="@+id/btSaveExpenseDetails"
+                android:id="@+id/btSavePersonalExpenseDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -74,7 +74,7 @@ tools:context="couplegoals.com.couplegoals.fragments.PersonalExpenseFragment">
 
         </LinearLayout>
         <ImageView
-            android:id="@+id/imageViewExpense"
+            android:id="@+id/imageViewPersonalExpense"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginBottom="5dp"
