--- a/app/src/main/res/layout/content_view_single_expense_detail.xml
+++ b/app/src/main/res/layout/content_view_single_expense_detail.xml
@@ -55,6 +55,13 @@
                 android:background="@color/colorPrimaryDark"
                 android:layout_marginBottom="2dp"
                 android:text="DELETE EXPENSE"/>
+            <Button
+                android:id="@+id/btnEditExpense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimaryDark"
+                android:layout_marginBottom="2dp"
+                android:text="EDIT EXPENSE"/>
             <ImageView
                 android:id="@+id/imageViewExpenseSingle"
                 android:layout_width="match_parent"
