--- a/app/src/main/res/layout/card_layout_view_couple_expense.xml
+++ b/app/src/main/res/layout/card_layout_view_couple_expense.xml
@@ -42,13 +42,6 @@
                 android:layout_height="wrap_content"
                 android:text="Paid by"
                 android:layout_weight="1"/>
-            <ImageButton
-                android:id="@+id/ibDeleteExpense"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_action_delete"
-                android:background="@android:color/transparent"/>
-
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,17 +57,36 @@
 
             <TextView
                 android:id="@+id/textViewExpenseNotes"
-                android:layout_width="163dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="Notes" />
-            <ImageButton
-                android:id="@+id/ibEditExpense"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_action_edit"
-                android:background="@android:color/transparent"/>
-
         </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <ImageButton
+            android:id="@+id/ibDeleteExpense"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_delete"
+            android:background="@android:color/transparent"
+            android:layout_alignParentLeft="true"/>
+        <ImageButton
+            android:id="@+id/ibEditExpense"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_edit"
+            android:background="@android:color/transparent"
+            android:layout_alignParentRight="true"/>
+    </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
     </android.support.v7.widget.CardView>
 
