--- a/app/src/main/res/layout/card_layout_view_couple_expense.xml
+++ b/app/src/main/res/layout/card_layout_view_couple_expense.xml
@@ -65,25 +65,42 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <ImageButton
             android:id="@+id/ibDeleteExpense"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_action_delete"
             android:background="@android:color/transparent"
-            android:layout_alignParentLeft="true"/>
+            android:layout_alignParentLeft="true"
+            android:layout_weight="1"/>
+        <ImageButton
+            android:id="@+id/ibShareExpense"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_share"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"/>
+        <ImageButton
+            android:id="@+id/ibInfoExpense"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_info"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"/>
         <ImageButton
             android:id="@+id/ibEditExpense"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_action_edit"
             android:background="@android:color/transparent"
-            android:layout_alignParentRight="true"/>
-    </RelativeLayout>
+            android:layout_alignParentRight="true"
+            android:layout_weight="1"/>
+    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
