--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -27,23 +27,33 @@ tools:context="couplegoals.com.couplegoals.fragments.AddExpenseFragment">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-            <EditText
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="170dp"
+                android:layout_height="wrap_content">
+                <EditText
                 android:id="@+id/etAmount"
-                android:layout_width="180dp"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:hint="Amount"
                 android:inputType="numberDecimal"
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/ic_action_ruppes"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="170dp"
+                android:layout_height="wrap_content">
             <EditText
                 android:id="@+id/etNotes"
-                android:layout_width="180dp"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content"
-                android:maxWidth="180dp"
-                android:hint="Notes(Optional)"
+                android:hint="Notes(Opt)"
                 android:drawableLeft="@drawable/ic_action_notes"
-                android:text=""/>
+                android:text=""
+                android:inputType="text"
+                android:maxLines="1"
+                android:singleLine="true"/>
+            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
