--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -55,6 +55,10 @@ tools:context="couplegoals.com.couplegoals.fragments.AddExpenseFragment">
                 android:singleLine="true"/>
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
+        <Spinner
+            android:id="@+id/spExpenseCategory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></Spinner>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
