--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -21,8 +21,10 @@ tools:context="couplegoals.com.couplegoals.fragments.AddExpenseFragment">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Add expense"/>
+            android:gravity="left"
+            android:layout_marginLeft="5dp"
+            android:text="Add expense"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -55,6 +57,12 @@ tools:context="couplegoals.com.couplegoals.fragments.AddExpenseFragment">
                 android:singleLine="true"/>
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="@string/select_category"
+            android:textStyle="bold"/>
         <Spinner
             android:id="@+id/spExpenseCategory"
             android:layout_width="match_parent"
