--- a/app/src/main/res/layout/fragment_add_expense_categories.xml
+++ b/app/src/main/res/layout/fragment_add_expense_categories.xml
@@ -36,7 +36,7 @@ tools:context="couplegoals.com.couplegoals.fragments.AddExpenseCategoriesFragmen
                     android:layout_weight="1"/>
             </android.support.design.widget.TextInputLayout>
             <Button
-                android:id="@+id/btSaveExpenseDetails"
+                android:id="@+id/btSaveCategoryName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -57,10 +57,19 @@ tools:context="couplegoals.com.couplegoals.fragments.AddExpenseCategoriesFragmen
         android:layout_height="wrap_content"
         android:text="@string/expense_categories"/>
 </android.support.v7.widget.CardView>
-<ListView
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:elevation="10dp"
+        android:id="@+id/cardViewCategories">
+    <ListView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/listViewExpenseCategories">
-</ListView>
+    </ListView>
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
