--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -9,8 +9,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardViewBaseFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/homebackground">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
