--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -43,6 +43,11 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/view_couple_expense"/>
+            <Button
+                android:id="@+id/btnViewDivided"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="View Divided expense"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
