--- a/app/src/main/res/layout/fragment_view_divided_couple_expense.xml
+++ b/app/src/main/res/layout/fragment_view_divided_couple_expense.xml
@@ -12,11 +12,27 @@
         android:layout_marginTop="10dp"
         android:elevation="10dp"
         android:id="@+id/cardViewViewExpense">
-        <Spinner
-            android:id="@+id/spinnerSelectDateRange"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </Spinner>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/date_range"
+                android:textStyle="bold"/>
+            <Spinner
+                android:id="@+id/spinnerSelectDateRange"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </Spinner>
+            <Button
+                android:id="@+id/btnViewExpense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/view_expense"/>
+
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
     <TextView
