--- a/app/src/main/res/layout/fragment_view_divided_couple_expense.xml
+++ b/app/src/main/res/layout/fragment_view_divided_couple_expense.xml
@@ -26,11 +26,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             </Spinner>
-            <Button
-                android:id="@+id/btnViewExpense"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/view_expense"/>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
@@ -65,6 +60,13 @@
         android:id="@+id/tvDifference"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+        android:text="difference"
+        android:gravity="center"
+        android:visibility="invisible"/>
+    <TextView
+        android:id="@+id/tvToBePaid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="difference"
         android:gravity="center"
         android:visibility="invisible"/>
