--- a/app/src/main/res/layout/fragment_personal_expense.xml
+++ b/app/src/main/res/layout/fragment_personal_expense.xml
@@ -45,6 +45,16 @@ tools:context="couplegoals.com.couplegoals.fragments.PersonalExpenseFragment">
                 android:drawableLeft="@drawable/ic_action_notes"
                 android:text=""/>
         </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="@string/select_category"
+            android:textStyle="bold"/>
+        <Spinner
+            android:id="@+id/spPersonalExpenseCategory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></Spinner>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
