--- a/app/src/main/res/layout/activity_add_couple_details.xml
+++ b/app/src/main/res/layout/activity_add_couple_details.xml
@@ -65,6 +65,13 @@ tools:context="couplegoals.com.couplegoals.activity.AddCoupleDetailsActivity">
             android:inputType="number"
             android:drawableLeft="@drawable/ic_action_mobile"/>
         <EditText
+            android:id="@+id/etYourDisplayName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Your display name"
+            android:inputType="text"
+            android:drawableLeft="@drawable/ic_action_user"/>
+        <EditText
             android:id="@+id/etPartnerNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -78,6 +85,13 @@ tools:context="couplegoals.com.couplegoals.activity.AddCoupleDetailsActivity">
             android:hint="Partner email id"
             android:inputType="textEmailAddress"
             android:drawableLeft="@drawable/ic_action_email"/>
+        <EditText
+            android:id="@+id/etPartnerDisplayName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Partner display name"
+            android:inputType="text"
+            android:drawableLeft="@drawable/ic_action_user"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -100,7 +114,7 @@ tools:context="couplegoals.com.couplegoals.activity.AddCoupleDetailsActivity">
         <ImageView
             android:id="@+id/imageCouple"
             android:layout_width="match_parent"
-            android:layout_height="172dp"
+            android:layout_height="68dp"
             android:layout_marginBottom="5dp"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
